refactor: integrate matchmaking logic